2004-06-04  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSDragView.h:
	* Source/GSDragView.m: New files with a backend neutral drag and
	drop implementation.
	* Source/GNUmakefile: Added GSDragView.m. 
	* Source/NSPrintOperation.m: Use correct subclass for PDF operations.

2004-06-02  Riccardo Mottola  <rollei@tiscalinet.it>
	    David Ayers  <d.ayers@inode.at>

	* Source/GSToolbar.m ([GSValidationManager-initWithWindow:):
	Move variable declarations to the beginning of the block.
	Format according to standards.
	
2004-06-01  Gregory John Casamento <greg_casamento@yahoo.com>

	* configure.ac: added code to detect the presence of 
	libaspell for the new implementation of GSspell.
	* configure: regenerated.
	* Tools/GSspell.m: Completely reimplemented the 
	spell-checker code using aspell.  This simplified the
	code tremendously.
	
2004-05-31  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSDrawFunctions.h:
	* Source/GSDrawFunctions.m: (-drawDarkButton::) New
	method. Changed all methods to return the interior rectangle.
	based on patch by Nicolas Roard <nicolas@roard.com>.
	* Source/NSComboBoxCell.m: (-_selectCompleted) new method to
	handle completion of selection in data source case correctly.
	(-popUpForComboBoxCell:) use this method and also clear
	selection at the end, so a new popup starts without selection.
	(-selectItemAtIndex:) simplified and return when invalid
	index is given. (-_loadButtonCell) always use image name
	"NSComboArrow" and removed force arrow variable.
	* Images/nsmapping.strings: mapping "NSComboArrow" to
	"common_ComboBoxEllipsis". 
		
2004-05-29  Quentin Mathe <qmathe@lub-internet.fr>
        
	* Source/NSComboBoxCell.m: Fixed problems related to decoding an
	encoded combo box previous version (Bug reported by Gregory
	Casamento).

2004-05-29  Gregory John Casamento <greg_casamento@yahoo.com>

	* Images/page_landscape.tiff: Removed the tags in the image
	which were causing warnings on load.